# GrandTheftRadio

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/cogs/: admin.py  info.py  radio.py
src/dao/: __init__.py  data.py  radio_data.py
src/dto/: models.py
src/output/: messenger.py  player.py  radio_player.py
src/resources/: radio_stations.json
src/resources/audio/: README.md
src/util/: logger_config.py
